--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -37,9 +38,8 @@ h1 {
 }
 
 .card {
-  padding: 2em;
-  border: 1px solid white;
-  border-radius: 0.5em;
+  padding: 3em;
+  filter: drop-shadow(0 0 1em #646cffaa);
 }
 
 #app {
@@ -47,6 +47,10 @@ h1 {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
